@@ -253,9 +253,10 @@ config_print_zone(nsd_options_t* opt, const char* k, const char *o, const char *
 		/* int */
 		SERV_GET_INT(server_count, o);
 		SERV_GET_INT(tcp_count, o);
+		SERV_GET_INT(tcp_query_count, o);
+		SERV_GET_INT(tcp_timeout, o);
 		SERV_GET_INT(statistics, o);
 		SERV_GET_INT(xfrd_reload_timeout, o);
-		SERV_GET_INT(tcp_query_count, o);
 		SERV_GET_INT(verbosity, o);
 
 		if(strcasecmp(o, "zones") == 0) {
@@ -287,6 +288,7 @@ config_test_print_server(nsd_options_t* opt)
 	printf("\tserver_count: %d\n", opt->server_count);
 	printf("\ttcp_count: %d\n", opt->tcp_count);
 	printf("\ttcp_query_count: %d\n", opt->tcp_query_count);
+	printf("\ttcp_timeout: %d\n", opt->tcp_timeout);
 	print_string_var("pidfile:", opt->pidfile);
 	print_string_var("port:", opt->port);
 	printf("\tstatistics: %d\n", opt->statistics);
